fix: homepage product z-index

--- a/web/_home.scss
+++ b/web/_home.scss
@@ -147,8 +147,6 @@
 		margin-right: auto;
 		flex-wrap: wrap;
 		justify-content: center;
-		border-radius: 0.3em;
-		overflow: hidden;
 		+ .homegrid {
 			margin-top: 3em;
 		}
@@ -168,6 +166,7 @@
 			-moz-user-drag: none;
 			-webkit-user-drag: none;
 			filter: brightness(1.3);
+			border-radius: 0.3em;
 		}
 		.stdgridbox {
 			@extend .stdshadow;
@@ -263,6 +262,8 @@
 			}
 		}
 		shopper-product {
+			position: relative;
+			z-index: 1;
 			.product-content::before {
 				opacity: 0.4;
 				display: block;
